--- a/css/style.css
+++ b/css/style.css
@@ -17,24 +17,40 @@
 .show-cart li {
   display: flex;
 }
-
-.show-cart li {
-  display: flex;
+#productList {
+  margin-bottom: 5rem;
 }
-/* .card {
-  margin-bottom: 20px;
-} */
-.card-img-top {
-  width: 200px;
+
+.cart-section__remove {
+  background-color: rgba(173, 137, 143, 0.801);
+  margin-right: 0.2rem;
+}
+.cart-section__add {
+  background-color: rgb(191, 178, 195);
+  margin-left: 0.2rem;
+}
+.img-top {
+  width: 100%;
   height: 200px;
   align-self: center;
 }
 footer {
-  display: flex;
-  justify-content: space-between;
   position: fixed;
   bottom: 0;
-  width: 100%;
-  background-color: #579c87;
-  border-top: 1px solid #a1c181;
+}
+.product-section {
+  margin-top: 6rem;
+}
+.product__btn {
+  
+  color: #eee;
+
+}
+.product__btn:hover {
+  cursor: pointer;
+text-decoration: none;
+color: #000;
+}
+#form1{
+  margin-bottom: 5rem;
 }
